# notion-workspace-app

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  IA.md  LICENSE  QUALIDADE.md  README.md  pyproject.toml  requirements.txt  start_app.py
.github/workflows/: ci.yml
front/: README.md  index.html  package-lock.json  package.json
front/src/: App.jsx  index.css
front/src/api/: client.js
front/src/hooks/: use-database-atual.js  use-exploracao.js  use-opcoes.js  use-tarefas.js
front/src/utils/: abrir-no-notion.js  cx.js  status-color.js
server/: manage.py  mcp_server.py
server/api/: apps.py  serializers.py  urls.py  views.py
server/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
server/core/: __init__.py  config.py
server/integrations/: __init__.py  github.py  notion.py  openrouter.py
server/operations/: apps.py  models.py
server/operations/migrations/: 0001_initial.py
server/services/: __init__.py  clonagem.py  conteudo.py  exploracao.py  ia.py  ingestao.py  inventario_github.py  normalizacao.py  projetos.py  sincronizar_github.py  tarefas.py
server/templates/: tarefas.html
tests/: conftest.py  test_api_tarefas.py  test_front.py  test_integrations_github.py  test_integrations_openrouter.py  test_mcp_server.py  test_services_clonagem.py  test_services_conteudo.py  test_services_exploracao.py  test_services_ia.py  test_services_ingestao.py  test_services_inventario_github.py  test_services_normalizacao.py  test_services_projetos.py  test_services_sincronizar.py  test_services_tarefas.py  test_start_app.py
(+16 files in other folders)
